# natural

./: .gitlab-ci.yml  .hlint.yaml  .ormolu  .travis.yml  LICENCE  Main.sh  README.md  cabal.project  changelog.md  default.nix  natural.cabal  natural.nix
ci/: ci.nix  jobsets.json  jobsets.nix
src/: Natural.hs  Whole.hs
test/: Main.hs  Tests.hs
