-- documentation, see http://haskell.org/cabal/users-guide/

name:                natural
version:             0.3.0.7
synopsis:            Natural number
description:
  Natural number
  .
  <<https://logo.systemf.com.au/systemf-450x450.png>>
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (C) 2020-2025 System F
category:            Control
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
homepage:            https://github.com/system-f/natural
bug-reports:         https://github.com/system-f/natural/issues
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.1, GHC == 8.8.1, GHC == 8.6.5, GHC == 8.10.1, GHC == 9.4.8

source-repository   head
  type:             git
  location:         git@github.com:system-f/natural.git

library
  exposed-modules:     Natural
  build-depends:       base >= 4.8 && < 6
                     , lens >= 4.15 && < 6
                     , semigroupoids >= 5 && < 7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc<8.0.1)
    build-depends:     semigroups >= 0.9 && < 1

test-suite             tests
  build-depends:       QuickCheck >= 2.9.2 && < 2.15
                     , base >= 4.8 && < 6
                     , checkers >= 0.4.6 && < 0.6
                     , hedgehog >= 0.5 && < 1.1
                     , lens >= 4.15 && < 6
                     , tasty >= 0.11 && < 1.3
                     , tasty-hunit >= 0.9 && < 0.11
                     , tasty-hedgehog >= 0.1 && < 1.1
                     , tasty-quickcheck >= 0.8.4 && < 0.11
                     , transformers >= 0.4.1 && < 0.6
                     , natural
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
