cabal-version:        2.4
name:                 natural
version:              0.4.0.0
synopsis:             Natural number
description:
  Natural number
  .
  <<https://logo.systemf.com.au/systemf-450x450.png>>
license:              BSD-3-Clause
license-file:         LICENCE
author:               Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:           Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:            Copyright (C) 2020-2026 System F
category:             Control
build-type:           Simple
extra-doc-files:      changelog.md
homepage:             https://github.com/system-f/natural
bug-reports:          https://github.com/system-f/natural/issues
tested-with:          GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.1, GHC == 8.8.1, GHC == 8.6.5, GHC == 8.10.1, GHC == 9.4.8, GHC == 9.6.7, GHC == 9.8.4

source-repository   head
  type:             git
  location:         git@github.com:system-f/natural.git

library
  exposed-modules:     Natural
  build-depends:       base >= 4.8 && < 6
                     , aeson >= 2.2 && < 3
                     , lens >= 4.15 && < 6
                     , semigroupoids >= 5 && < 7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc<8.0.1)
    build-depends:     semigroups >= 0.9 && < 1

test-suite doctest
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base >= 4.8 && < 6
                      , process >= 1 && < 2
  build-tool-depends:   doctest:doctest >= 0.22
  default-language:     Haskell2010
  ghc-options:          -Wall
